<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <TextView
        android:id="@+id/keyword_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/keyword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/keyword_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/input_error_message"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_keyword"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/editText_keyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/keyword_hint"
        android:inputType="text"
        android:textSize="14sp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword_label" />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/keyword_error" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_label" />

    <TextView
        android:id="@+id/condition_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

    <CheckBox
        android:id="@+id/checkBox_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cond_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/condition_label" />

    <CheckBox
        android:id="@+id/checkBox_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cond_used"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox_new"
        app:layout_constraintStart_toEndOf="@+id/checkBox_new" />

    <CheckBox
        android:id="@+id/checkBox_unspecified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/cond_unspecified"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox_used"
        app:layout_constraintStart_toEndOf="@+id/checkBox_used" />

    <CheckBox
        android:id="@+id/checkBox_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/local_pickup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipping_label" />

    <CheckBox
        android:id="@+id/checkBox_free"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/free_shipping"
        app:layout_constraintStart_toEndOf="@+id/checkBox_local"
        app:layout_constraintTop_toBottomOf="@+id/shipping_label" />

    <TextView
        android:id="@+id/shipping_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/shipping_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_new" />

    <TextView
        android:id="@+id/nearby_search_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/enable_nearby_search"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox_nearby_search"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_nearby_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/nearby_search_label"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_free" />


    <RelativeLayout
        android:id="@+id/nearby_search_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_nearby_search"
        android:visibility="gone"
        >


        <EditText
            android:id="@+id/editText_miles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/miles_hint"
            android:inputType="text"
            android:text=""
            android:textSize="14sp" />

        <TextView
            android:id="@+id/from_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_miles"
            android:layout_marginTop="8dp"
            android:text="@string/from" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/from_label">

            <RadioButton
                android:id="@+id/radio_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_location"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radio_zipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />

        </RadioGroup>

        <android.support.v7.widget.AppCompatAutoCompleteTextView
            android:id="@+id/editText_zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/radioGroup"
            android:layout_alignBottom="@id/radioGroup"
            android:layout_marginStart="32dp"
            android:ems="12"
            android:hint="@string/zipcode_hint"
            android:inputType="text"
            android:text=""
            android:textSize="14sp"
            android:enabled="false"/>

        <TextView
            android:id="@+id/zipcode_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_zipcode"
            android:text="@string/input_error_message"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nearby_search_options">

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@color/colorExtra"
            android:paddingHorizontal="48dp"
            android:text="@string/search"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@color/colorExtra"
            android:paddingHorizontal="48dp"
            android:text="@string/clear"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="DEBUG"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_layout" />


</android.support.constraint.ConstraintLayout>